# game_engine_framework

./: .gitmodules  CMakeLists.txt  main.cpp
engine_framework/: CMakeLists.txt
engine_framework/include/events/: EventSource.hpp  EventTicket.hpp  IEventTicket.hpp
engine_framework/include/game_state/: AttributeStateFrame.hpp
engine_framework/include/utils/: TypeUtils.hpp
engine_framework/test/: CMakeLists.txt  TestFlatteningLifoQueue.cpp  main.cpp
engine_framework/test/events/: TestEventSource.cpp
engine_framework/test/game_state/: TestAttributeStateQueue.cpp  TestGameState.cpp  TestGameStateGenerator.cpp
engine_framework/test/utils/: TestTypeUtils.cpp
include/: AttributeGeneratorDefault.hpp  AttributeStateFrame.hpp  AttributeStateQueue.hpp  Attributes.hpp  FlatteningLifoQueue.hpp  GameState.hpp
include/events/: EventReceiver.cpp  EventReceiver.hpp  EventSource.cpp  EventSource.hpp  EventTicket.cpp  EventTicket.hpp  EventTicketCourier.cpp  EventTicketCourier.hpp  IEventApplier.hpp  IEventTicketCourier.hpp  IEventTicketReceiver.hpp  MakeEventSource.cpp
include/game_state/: AttributeGeneratorDefault.hpp  AttributeProcessorBase.hpp  AttributeStateFrame.hpp  AttributeStateQueue.hpp  GameState.hpp  GameStateAccess.hpp  GameStateGenNotifier.hpp  GameStateGenerator.hpp  GameState_defs.hpp
include/utils/: Locked.hpp  Protected.hpp  TypeChain.hpp  TypeUtils.hpp
io/include/WindowContext/: IWindowContext.hpp
io/src/: main.cpp
io/src/WindowContext/: GLFWContext.cpp
src/events/: EventReceiver.cpp  EventSource.cpp  EventTicket.cpp  EventTicketCourier.cpp
test/: CMakeLists.txt
test/events/: TestEventReceiver.cpp  TestEventTicketCourier.cpp
tests/: CMakeLists.txt  TestAttributeStateFrame.cpp  TestAttributeStateQueue.cpp  TestFlatteningLifoQueue.cpp  TestGameState.cpp
tests/events/: TestEventReceiver.cpp  TestEventSource.cpp  TestEventTicket.cpp  TestEventTicketCourier.cpp
tests/game_state/: TestAttributeProcessorBase.cpp  TestAttributeStateFrame.cpp  TestGameState.cpp  TestGameStateGenNotifier.cpp  TestGameStateGenerator.cpp
tests/utils/: TestTypeChain.cpp
